classDiagram
  ShippingDeliveryTime -- QuantitativeValue
  ShippingDeliveryTime -- OpeningHoursSpecification
  ShippingDeliveryTime -- time


class ShippingDeliveryTime {

  QuantitativeValue transitTime
  OpeningHoursSpecification businessDays
  QuantitativeValue handlingTime
  time cutoffTime

 }
